# pingpong-calculation

./: .gitignore  Makefile  README.md  main_dynamic.go  main_static.go
data/: transition_matrix.csv  transition_matrix_lite.csv
lib/: .gitignore  hello.h  pingpong.h
lib/hello/src/: lib.rs
lib/pingpong/: Cargo.toml
lib/pingpong/data/: transition_matrix.csv
lib/pingpong/src/: calc.rs  data.rs  lib.rs
src/: go.mod
src/cmd/main_dynamic/: main_dynamic.go
src/cmd/main_static/: main_static.go
src/internal/server/: server.go
src/main_dynamic/: main_dynamic.go
src/main_static/: main_static.go
